--- a/sass/style.scss
+++ b/sass/style.scss
@@ -66,7 +66,6 @@ img {
     align-items: center;
     padding-bottom: 8px;
 }
-.top-info {}
 .number, .top-info__addres  {
     font-size: 15px;
     font-weight: 600;
@@ -79,8 +78,6 @@ img {
     color: $red;
     font-size: 20px;
 }
-.top-info__metro {}
-.top-info__addres {}
 .top-nav {
     outline: none;
     border: 1px solid $black;
@@ -112,6 +109,7 @@ img {
             transition: all 0.3s ease;
             transform: translateX(-10px);
             padding-bottom: 10px;
+            z-index: 10;
             li {
             width: 220px;
             padding: 3px 0;
@@ -149,6 +147,7 @@ img {
 }
 .aside-right {
     float: right;
+    flex: 0 0 12%;
 }
 .aside-left, .aside-right {
     margin: 30px 15px 0;
@@ -160,7 +159,6 @@ img {
     display: flex;
     justify-content: space-between;
 }
-.aside-brands {}
 .aside-brands-item {
     width: 92px;
     margin-bottom: 10px;
@@ -224,18 +222,6 @@ img {
   }
 }
 
-
-.main {}
-.aside-left {}
-.aside-brands {}
-.aside-title {}
-.pulse {}
-.pulse-line {}
-.left-line {}
-.righ-line {}
-.aside-brands-wrapper {}
-.aside-brands-item {}
-.main-content {}
 .main-title {
     font-size: 1.8rem;
     padding: 2rem 0 1rem;
@@ -357,6 +343,7 @@ img {
 .grid-item {
     display: flex;
     flex-direction: column;
+    justify-content: flex-end;
     align-items: center;
     text-align: center;
 }
@@ -380,10 +367,14 @@ img {
         margin-top: 30px;
         padding-left: 15px;
         padding-right: 15px;
-        .title-small::before {
-            content: none;
+        .title-small {
+            font-size: 1.2rem;
+            margin-bottom: 0;
+            &::before {
+                content: none;
+            }
         }
-}
+        }
 }
 .divider {
     width: 100%;
@@ -482,7 +473,6 @@ img {
             flex-shrink: 0;
             margin-right: 10px;
         }
-        .case-content {}
         .case-data {
             line-height: 1.4;
             font-size: 16px;
@@ -706,6 +696,7 @@ img {
     position: relative;
     margin-bottom: 5px;
     opacity: 0.8;
+    font-size: 14px;
     &::after {
         content: '→';
         position: absolute;
@@ -734,9 +725,46 @@ img {
         font-size: 12px;
         text-align: left;
         max-width: 200px;
-        margin-bottom: 10px;
+        margin-bottom: 30px;
     }
     .aside-link {
         align-self: end;
+    }
+}
+
+.aside-news {
+    .aside-link {
+        font-size: 13px;
+    }
+    .news-data {
+        display: block;
+        text-align: right;
+        margin-bottom: 7px;
+        font-size: 12px;
+        opacity: 0.5;
+    }
+}
+.aside-news.programms {
+    .news-data {
+        text-align: justify;
+    }
+}
+
+
+.clients-wrapper {
+    position: relative;
+    width: 200px; /* заменить [width] на нужную ширину обертки */
+    height: 195px; /* заменить [height] на нужную высоту обертки */
+    overflow: hidden;
+    img {
+        width: auto;
+        height: auto;
+        position: absolute;
+        top: 0;
+        right: 0;
+        left: 0;
+        bottom: 0;
+        display: none;
+        margin: 0 auto;
     }
 }
