--- a/sass/style.scss
+++ b/sass/style.scss
@@ -1414,7 +1414,38 @@ img.border-black {
     opacity:.5;
     z-index:20;
 }
+.defects-block {
+    .grid {
+        grid-template-columns: 1fr;
+    }
+    .grid-item {
+        display: grid;
+        grid-template-columns: 5fr 1fr;
+        gap: 30px;
+        text-align: left;
+    }
+}
 
-iframe {
-    display: none;
+.defects-block-descr.questions {
+    .descr {
+        margin-bottom: 0;
+        margin-top: 1rem;
+    }
+}
+
+.first-tr {
+    width: 100%;
+    border: 1px solid #282828;
+    border-radius: 7px;
+    background: #282828 linear-gradient(rgba(193,193,193,.3),#000);
+    box-shadow: inset 0 -2px 1px rgba(0,0,0,0), inset 0 1px 2px rgba(0,0,0,0), inset 0 0 0 60px rgba(255,255,0,0);
+    h2 {
+        color: white;
+    }
+}
+
+.card-table {
+    td {
+        padding: 0.8rem;
+    }
 }
